--- a/Time/app/src/main/res/layout/activity_main.xml
+++ b/Time/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
 
         <TextView
             android:id="@+id/service_question"
+            style="@style/Widget.TipTime.TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -120,6 +121,7 @@
 
         <TextView
             android:id="@+id/tip_result"
+            style="@style/Widget.TipTime.TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
